kubernetes/apps/mltb/app/mltb/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: &name mltb
spec:
  selector:
    app.kubernetes.io/name: *name
  ports:
    - name: rclone
      port: 8080
    - name: base
      port: 80
    - name: sth
      port: 8090
    - name: sth-i
      port: 8070
