kubernetes/apps/mltb/app/mltb/duckdns.http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: duckdns-mltb-443
spec:
  parentRefs:
    - name: gateway-duckdns
      sectionName: https-wildcard
      namespace: gateway-api
  hostnames:
    - "mltb.${DUCKDNS_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mltb-mltb
          port: 443

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: duckdns-mltb-8080
spec:
  parentRefs:
    - name: gateway-duckdns
      sectionName: 8080-http-wildcard
      namespace: gateway-api
  hostnames:
    - "mltb.${DUCKDNS_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mltb-mltb
          port: 8080
