kubernetes/apps/mltb/app/mltb/idvn.http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idvn-mltb-base
spec:
  parentRefs:
    - name: gateway-idvn-public
      sectionName: http-wildcard
      namespace: gateway-api
  hostnames:
    - mltb.${IDVN_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mltb-mltb
          port: 80

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idvn-mltb-8080
spec:
  parentRefs:
    - name: gateway-idvn-public
      sectionName: 8080-https-wildcard
      namespace: gateway-api
  hostnames:
    - "mltb.${IDVN_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mltb-mltb
          port: 8080
